# serializer version: 1
# name: test_platform_setup_and_discovery[switch.laundry_door_curfew_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.laundry_door_curfew_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Curfew active',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'curfew_enabled',
    'unique_id': '727608-curfew_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[switch.laundry_door_curfew_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Curfew active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.laundry_door_curfew_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery[switch.maui_indoor_only-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.maui_indoor_only',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:door',
    'original_name': 'Indoor Only',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indoor_only',
    'unique_id': '472721-indoor_only',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[switch.maui_indoor_only-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.maui_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[switch.pet_with_empty_status_indoor_only-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:door',
    'original_name': 'Indoor Only',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indoor_only',
    'unique_id': '222222-indoor_only',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[switch.pet_with_empty_status_indoor_only-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.laundry_door_curfew_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.laundry_door_curfew_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Curfew active',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'curfew_enabled',
    'unique_id': '727608-curfew_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.laundry_door_curfew_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Curfew active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.laundry_door_curfew_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.pet_with_empty_status_indoor_only-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:door',
    'original_name': 'Indoor Only',
    'platform': 'surepetcare',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'indoor_only',
    'unique_id': '222222-indoor_only',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery_missing_entities[switch.pet_with_empty_status_indoor_only-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.laundry_door_curfew_active-off]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Curfew active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.laundry_door_curfew_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.laundry_door_curfew_active-on]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Laundry Door Curfew active',
    }),
    'context': <ANY>,
    'entity_id': 'switch.laundry_door_curfew_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.maui_indoor_only-off]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.maui_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.maui_indoor_only-on]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Maui Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.maui_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.pet_with_empty_status_indoor_only-off]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_switch_toggle_and_snapshot[switch.pet_with_empty_status_indoor_only-on]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pet with empty status Indoor Only',
      'icon': 'mdi:door',
    }),
    'context': <ANY>,
    'entity_id': 'switch.pet_with_empty_status_indoor_only',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
